@@ -6,3 +6,4 @@ patches, helped working out solutions etc. Thanks to all of you!
 
 - Ronny Pfannschmidt
 - Noah Slater <nslater@bytesexual.org>
+- Alec Thomas
