@@ -30,6 +30,8 @@ Version 0.2
 - added `werkzeug.unescape`
 - added `BaseResponse.freeze`
 - added `werkzeug.contrib.atom`
+- the HTTPExceptions accept an argument `description` now which overrides the
+  default description.
 
 
 Version 0.1
